[package]
authors = ['Metaverse Network <https://github.com/bit-country>']
description = 'Metaverse Network pallet for general nft logic.'
edition = '2018'
homepage = 'https://bit.country'
license = 'Unlicense'
name = 'pallet-nft'
repository = 'https://github.com/bit-country'
version = '2.0.0-rc6'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { version = "1.0.124", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false, optional = true }
primitives = { package = "bit-country-primitives", path = "../primitives", default-features = false }
orml-traits = { git = "https://github.com/bit-country/open-runtime-module-library", rev = "59df1dfc1a", default-features = false }
orml-nft = { git = "https://github.com/bit-country/open-runtime-module-library", rev = "59df1dfc1a", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false }

sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false }
auction-manager = { package = "auction-manager", path = "../../traits/auction-manager", default-features = false }
currencies = { package = "currencies", path = "../currencies", default-features = false }

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'sp-std/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'frame-support/std',
    'frame-system/std',
    'primitives/std',
    'orml-traits/std',
    'orml-nft/std',
    'pallet-balances/std',
    'pallet-timestamp/std',
    'auction-manager/std',
    'currencies/std'
]

runtime-benchmarks = [
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
