[package]
authors = ['Metaverse Network <https://github.com/bit-country>']
description = 'Metaverse Network pallet for general nft logic.'
edition = '2021'
homepage = 'https://metaverse.network'
license = 'Unlicense'
name = 'pallet-nft'
repository = 'https://github.com/bit-country'
version = '2.0.0-rc6'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { workspace = true, optional = true, features = ["derive"] }
log = { workspace = true }
scale-info = { workspace = true }
codec = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
sp-io = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
primitives = { package = "bit-country-primitives", path = "../../primitives/metaverse", default-features = false }
orml-traits = { workspace = true }
orml-nft = { workspace = true }
orml-tokens = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-scheduler = { workspace = true, optional = true }

sp-core = { workspace = true }
pallet-balances = { workspace = true }
auction-manager = { package = "auction-manager", path = "../../traits/auction-manager", default-features = false }
currencies = { package = "currencies", path = "../currencies", default-features = false }
primitive-traits = { package = "core-primitives", path = "../../traits/core-primitives", default-features = false }

[features]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
default = ['std']
std = [
    'serde',
    'codec/std',
    'sp-std/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'frame-support/std',
    'frame-system/std',
    'primitives/std',
    'orml-traits/std',
    'orml-tokens/std',
    'orml-nft/std',
    'pallet-balances/std',
    'pallet-timestamp/std',
    'auction-manager/std',
    'currencies/std',
    'scale-info/std',
    'pallet-scheduler/std',
    'primitive-traits/std'
]


