[package]
name = "oracle"
version = "1.0.0"
edition = "2018"
authors = ['Bit Country Developer']
# description = "A pallet that demonstrates many aspects of offchain workers"
license = "GPL-3.0-or-later"

[dependencies]
parity-scale-codec = { default-features = false, features = ['derive'], version = '1.3.0' }
parking_lot = "0.10.0"
alt_serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, git = "https://github.com/serde-rs/json", features = ["alloc"] }



# Substrate packages
# sp-runtime = { version = "2.0.0", default-features = false }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
# sp-runtime = { version = "2.0.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
pallet-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
# frame-executive = { version = "2.0.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1"}
serde = { version = "1.0.124", optional = true, features = ["derive"] }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-offchain = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-version = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
primitives = { package = "bit-country-primitives", path = "../primitives", default-features = false }

[features]
default = ['std']
std = [
    'frame-support/std',
    'frame-system/std',
    'parity-scale-codec/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
]
