[package]
name = "oracle"
version = "1.0.0"
edition = "2018"
authors = ['Bit Country Developer']
# description = "A pallet that demonstrates many aspects of offchain workers"
license = "GPL-3.0-or-later"


[dependencies]
parity-scale-codec = { default-features = false, features = ['derive'], version = "2.0.0" }
alt_serde = { version = "1", default-features = false, features = ["derive"] }

# Substrate packages
frame-support = { version = '3.0.0', default-features = false }
frame-system = { version = '3.0.0', default-features = false }
sp-core = { version = '3.0.0', default-features = false }
#sp-io = { version = '3.0.0', default-features = false }
sp-runtime = { version = '3.0.0', default-features = false }
sp-std = { version = '3.0.0', default-features = false }

[features]
default = ['std']
std = [
    'frame-support/std',
    'frame-system/std',
    'parity-scale-codec/std',
    #	'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
]
