[package]
name = "oracle"
version = "1.0.0"
edition = "2018"
authors = ['Metaverse Network Developer']
# description = "A pallet that demonstrates many aspects of offchain workers"
license = "GPL-3.0-or-later"


[dependencies]
parity-scale-codec = { default-features = false, features = ['derive'], version = "2.2.0" }

# Substrate packages
frame-support = { git = "https://github.com/paritytech/substrate", rev = "91061a7d92", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", rev = "91061a7d92", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", rev = "91061a7d92", default-features = false }
#sp-io = { git = "https://github.com/paritytech/substrate", rev = "91061a7d92", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", rev = "91061a7d92", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", rev = "91061a7d92", default-features = false }

[features]
default = ['std']
std = [
    'frame-support/std',
    'frame-system/std',
    'parity-scale-codec/std',
    #	'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
]
