[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
name = "parachain-info"
version = "0.1.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
serde = { version = "1.0.119", optional = true, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }

cumulus-primitives = { git = 'https://github.com/paritytech/cumulus.git', default-features = false, branch = "rococo-v1" }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde",
    "cumulus-primitives/std",
    "frame-support/std",
    "frame-system/std",
]
