[package]
name = "bit-country-primitives"
version = "0.1.0"
authors = ["Bit.Country Developers"]
edition = "2018"


[dependencies]
serde = { version = "1.0.119", optional = true, default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "rococo-v1" }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-std/std",
    "xcm/std"
]