[package]
name = "bit-country-primitives"
version = "0.1.0"
authors = ["Bit.Country Developers"]
edition = "2018"

[dependencies]
serde = { version = "1.0.119", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-core = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
sp-application-crypto = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "frame-system/std",
    "sp-application-crypto/std",
    "sp-core/std",
    "sp-runtime/std",
]