[package]
authors = ['Metaverse Network <https://github.com/bit-country>']
description = 'Metaverse Network pallet.'
edition = '2021'
homepage = 'https://metaverse.network'
license = 'Unlicense'
name = 'pallet-reward'
repository = 'https://github.com/bit-country'
version = '2.0.0-rc6'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { version = "1.0.137", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
primitives = { package = "bit-country-primitives", path = "../../primitives/metaverse", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false, optional = true }

# local packages
core-primitives = { path = "../../traits/core-primitives", default-features = false }

# Orml packages
orml-traits = { git = "https://github.com/bit-country/open-runtime-module-library", branch = "v-9.26", default-features = false }
orml-currencies = { git = "https://github.com/bit-country/open-runtime-module-library", branch = "v-9.26", default-features = false }
orml-tokens = { git = "https://github.com/bit-country/open-runtime-module-library", branch = "v-9.26", default-features = false }
orml-nft = { git = "https://github.com/bit-country/open-runtime-module-library", branch = "v-9.26", default-features = false }
currencies = { package = "currencies", path = "../currencies", default-features = false }
pallet-estate = { package = "pallet-estate", path = "../estate", default-features = false }
pallet-nft = { package = "pallet-nft", path = "../nft", default-features = false }
pallet-mining = { package = "pallet-mining", path = "../mining", default-features = false }
auction-manager = { default-features = false, package = 'auction-manager', path = '../../traits/auction-manager' }

[features]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
default = ['std']
std = [
    "serde",
    "codec/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "sp-io/std",
    "sp-core/std",
    "sp-std/std",
    "orml-traits/std",
    "orml-tokens/std",
    "pallet-nft/std",
    "primitives/std",
    "scale-info/std",
    "frame-benchmarking/std",
    "currencies/std",
    "auction-manager/std",
    "pallet-mining/std"
]
