[package]
authors = ['Metaverse Network <https://github.com/bit-country>']
description = 'Metaverse Network pallet.'
edition = '2021'
homepage = 'https://metaverse.network'
license = 'Unlicense'
name = 'pallet-reward'
repository = 'https://github.com/bit-country'
version = '2.0.0-rc6'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { workspace = true, optional = true, features = ["derive"] }
codec = { workspace = true, package = "parity-scale-codec" }
log = { workspace = true }
scale-info = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-system = { workspace = true }
frame-support = { workspace = true }
pallet-balances = { workspace = true }
pallet-insecure-randomness-collective-flip = { workspace = true }
pallet-sudo = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-proxy = { workspace = true }
sp-io = { workspace = true }
sp-core = { workspace = true }
sp-session = { workspace = true }
sp-version = { workspace = true }
primitives = { package = "bit-country-primitives", path = "../../primitives/metaverse", default-features = false }
frame-benchmarking = { workspace = true, optional = true }

# Orml packages
orml-traits = { workspace = true }
orml-currencies = { workspace = true }
orml-tokens = { workspace = true }
orml-nft = { workspace = true }
currencies = { package = "currencies", path = "../currencies", default-features = false }
pallet-estate = { package = "pallet-estate", path = "../estate", default-features = false }
pallet-nft = { package = "pallet-nft", path = "../nft", default-features = false }
pallet-mining = { package = "pallet-mining", path = "../mining", default-features = false }
auction-manager = { default-features = false, package = 'auction-manager', path = '../../traits/auction-manager' }
core-primitives = { path = "../../traits/core-primitives", default-features = false }

# Other
hex-literal = { workspace = true }

[features]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
default = ['std']
std = [
    "serde",
    "codec/std",
    "log/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "sp-io/std",
    "sp-core/std",
    "sp-std/std",
    "orml-traits/std",
    "orml-tokens/std",
    "pallet-nft/std",
    "primitives/std",
    "scale-info/std",
    "frame-benchmarking/std",
    "currencies/std",
    "auction-manager/std",
    "pallet-mining/std",
    "pallet-proxy/std"
]
